# Project-Manager

./: .gitignore  DATABASE_SETUP_GUIDE.md  DATA_FLOW_ANALYSIS.md  LICENSE  alembic.ini  pyproject.toml  verify_schema.py
backend/: add_started_at.py  check_schema.py  migrate_subtask_dates.py
backend/app/: main.py
backend/app/routers/: task.py
backend/database_setup/: crud.py  database.py  models.py  schemas.py
docs/: DESKTOP_APP_AND_CI_CD_STRATEGY.md  ERROR_FIXES_SUMMARY.md  alembic_commands.txt
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: _error.js  app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/algorithms/: page.tsx
frontend/app/backtester/: page.tsx
frontend/app/broker/: page.tsx
frontend/app/components/: Task.tsx  TaskForm.tsx  TaskItem.tsx  app-sidebar.tsx
frontend/app/componentsCust/: AddSubtaskForm.tsx  SubtaskItem.tsx  Task.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  app-sidebar.tsx
frontend/app/dashboard/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/frontEnd/: page.tsx
frontend/app/hooks/: useTask.ts
frontend/app/logManager/: page.tsx
frontend/app/machineLearning/: page.tsx
frontend/app/portfolioCore/: page.tsx
frontend/app/researchLab/: page.tsx
frontend/app/risk/: page.tsx
frontend/app/services/: apis.ts
frontend/app/trader/: page.tsx
frontend/app/types/: index.ts
(+286 files in other folders)
