[project]
name = "buraq-manager"
version = "0.1.0"
description = "Project Manager"
authors = [
    {name = "mehassanhmood",email = "mehassanhmood@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "uvicorn (>=0.34.3,<1.0.0)",
    "alembic (>=1.16.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.3"

